Adding more interfaces for semantic type and curie prefix returns gathered from the redis database
